# agent-llm-wiki-matrix

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.yml  index.html  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
adr/0001-campaign-orchestration/: index.html
architecture/browser/: index.html
architecture/current-state/: index.html
architecture/data-model/: index.html
architecture/evaluation-pipeline/: index.html
architecture/runtime/: index.html
architecture/target-state/: index.html
audits/capability-classification/: index.html
audits/current-capability-status/: index.html
audits/mission-gap-audit/: index.html
audits/release-readiness-audit/: index.html
audits/schema-drift-contracts-inventory/: index.html
audits/schema-runtime-hardening-2026-04-18/: index.html
audits/v0.2.4-publication-workflow-audit/: index.html
benchmarks/v1/: README.md  llamacpp.v1.yaml  offline.v1.yaml  ollama.v1.yaml
config/: providers.example.yaml
contributing/: index.html
docs/: contributing.md  implementation-log.md  index.md  release-readiness.md
docs/adr/: 0001-campaign-orchestration.md
docs/architecture/: browser.md  current-state.md  data-model.md  evaluation-pipeline.md  runtime.md  target-state.md
docs/audits/: capability-classification.md  current-capability-status.md  mission-gap-audit.md  release-readiness-audit.md  schema-drift-contracts-inventory.md  schema-runtime-hardening-2026-04-18.md  v0.2.4-publication-workflow-audit.md
docs/examples/: README.md
docs/releases/: v0.1.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md
docs/roadmap/: v0.2.0.md  v0.2.3.md  v0.2.4.md  v0.2.5.md
docs/tracking/: benchmark-campaign-orchestration.md  campaign-orchestration.md  v0.2.3-campaign.md  v0.2.4-campaign.md  (+1 more)
examples/: index.html  sample-note.json
fixtures/: README.md
implementation-log/: index.html
prompts/: registry.yaml
release-readiness/: index.html
scripts/: ollama-gptoss-setup.sh  smoke-ollama-live.sh  smoke.sh
search/: search_index.json
templates/: evaluation.md  event.md  experiment.md  matrix.md  report-weekly.md  report.md  thought.md
tests/: conftest.py  test_agentic_benchmark_pack.py  test_benchmark.py  test_benchmark_browser.py  test_benchmark_campaign.py  test_benchmark_cases.py  test_benchmark_expansion.py  test_benchmark_observability.py  test_benchmark_prompt_registry.py  test_benchmark_taxonomy.py  test_browser.py  test_browser_formatting.py  test_campaign_compare_core.py  test_campaign_directory_compare.py  test_campaign_reporting.py  test_campaign_result_pack.py  test_campaign_result_pack_compare.py  test_domain.py  test_evaluation_backends.py  test_example_campaigns.py  test_fingerprint_interpretation_attribution.py  test_fingerprints.py  test_live_probe.py  test_longitudinal.py  test_manifest.py  test_mcp_stdio.py  test_pipelines.py  test_prompt_registry.py  test_providers.py  test_report_markdown_readability.py  test_schema_drift_contracts.py  test_smoke.py
(+755 files in other folders)
